<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="200dp"
              android:layout_marginHorizontal="10dp"
              android:layout_marginTop="10dp"
              android:textColor="@color/colorAccent"
              android:background="@android:color/holo_purple">

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/available_balance"
              android:paddingTop="15dp"
              android:textSize="20dp"
              android:textColor="@color/colorAccent"
              android:gravity="center"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/usd"
                android:textColor="@color/colorAccent"
                android:layout_weight="1"
                android:gravity="right"/>
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:paddingTop="10dp"
                  android:text="@string/balance"
                  android:textSize="50dp"
                  android:layout_weight="1"
                  android:textColor="@color/colorAccent"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:paddingBottom="20dp"
            android:text="@string/last_payment"
            android:textColor="@color/colorAccent"

        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="@color/colorAccent"
            android:layout_marginRight="15dp"
            android:paddingBottom="20dp"
            android:gravity="right"
            android:layout_weight="1"
        />

    </LinearLayout>
</LinearLayout>











